; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_set_bits_per_cycle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_set_bits_per_cycle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@RFBI_CONFIG0 = common dso_local global i32 0, align 4
@rfbi = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rfbi_set_bits_per_cycle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfbi_set_bits_per_cycle(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @rfbi_enable_clocks(i32 1)
  %5 = load i32, i32* @RFBI_CONFIG0, align 4
  %6 = call i32 @rfbi_read_reg(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, -4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  switch i32 %9, label %14 [
    i32 8, label %10
    i32 16, label %11
  ]

10:                                               ; preds = %1
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = or i32 %12, 3
  store i32 %13, i32* %3, align 4
  br label %16

14:                                               ; preds = %1
  %15 = call i32 (...) @BUG()
  br label %16

16:                                               ; preds = %14, %11, %10
  %17 = load i32, i32* @RFBI_CONFIG0, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @rfbi_write_reg(i32 %17, i32 %18)
  %20 = load i32, i32* %2, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 0), align 4
  %21 = call i32 @rfbi_enable_clocks(i32 0)
  ret void
}

declare dso_local i32 @rfbi_enable_clocks(i32) #1

declare dso_local i32 @rfbi_read_reg(i32) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @rfbi_write_reg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
